force-app/main/default/objects/EBS_Order__c/fields/PO_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>PO_Notification_Sent__c</fullName>
    <defaultValue>true</defaultValue>
    <label>PO Notification Sent</label>
    <type>Checkbox</type>
</CustomField>