force-app/main/default/objects/EBS_Order__c/fields/PO_Receipt_Confirmation_Sent__c.field-meta.xml
<CustomField>
    <fullName>PO_Receipt_Confirmation_Sent__c</fullName>
    <inlineHelpText
  >If the value is NA, then do not send any notification to the customer</inlineHelpText>
    <label>PO Receipt Confirmation Sent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>