force-app/main/default/objects/EBS_Order__c/fields/PO_Total_Difference__c.field-meta.xml
<CustomField>
    <fullName>PO_Total_Difference__c</fullName>
    <label>PO Total Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>