force-app/main/default/objects/EBS_Order__c/fields/Primary_Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Person__c</fullName>
    <formula>Account_Name__r.Primary_Team_Member2__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Sales Person</label>
    <type>Text</type>
</CustomField>