force-app/main/default/objects/EBS_Order__c/fields/Proof_Hold__c.field-meta.xml
<CustomField>
    <fullName>Proof_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proof Hold</label>
    <type>Checkbox</type>
</CustomField>