force-app/main/default/objects/EBS_Order__c/fields/Quote_Request__c.field-meta.xml
<CustomField>
    <fullName>Quote_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Request</label>
    <referenceTo>Quote_Request__c</referenceTo>
    <relationshipLabel>EBS Orders</relationshipLabel>
    <relationshipName>EBS_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>