force-app/main/default/objects/EBS_Order__c/fields/Reference_Order__c.field-meta.xml
<CustomField>
    <fullName>Reference_Order__c</fullName>
    <description
  >Field to capture the previous order number if the current order is a repeat order.</description>
    <inlineHelpText
  >Field to capture the previous order number if the current order is a repeat order.</inlineHelpText>
    <label>Reference Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>