force-app/main/default/objects/EBS_Order__c/fields/Release_By__c.field-meta.xml
<CustomField>
    <fullName>Release_By__c</fullName>
    <label>Release By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>