force-app/main/default/objects/EBS_Order__c/fields/Release_Reason__c.field-meta.xml
<CustomField>
    <fullName>Release_Reason__c</fullName>
    <label>Release Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>