force-app/main/default/objects/EBS_Order__c/fields/Repeat_Order_Flag__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Order_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Repeat Order Flag</label>
    <type>Checkbox</type>
</CustomField>