force-app/main/default/objects/EBS_Order__c/fields/Resend_Notification__c.field-meta.xml
<CustomField>
    <fullName>Resend_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to resend notifications, in case of failure.</description>
    <label>Resend Notification</label>
    <type>Checkbox</type>
</CustomField>