force-app/main/default/objects/EBS_Order__c/fields/Sales_Agreement_exists__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agreement_exists__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sales Agreement exists for this ACCOUNT/ORDER</description>
    <inlineHelpText
  >Sales Agreement exists for this ACCOUNT/ORDER</inlineHelpText>
    <label>Sales Agreement exists</label>
    <type>Checkbox</type>
</CustomField>