force-app/main/default/objects/EBS_Order__c/fields/Sales_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sales_Contact__c</fullName>
    <label>Sales Contact Email</label>
    <type>Email</type>
</CustomField>