force-app/main/default/objects/EBS_Order__c/fields/Sales_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Contact_Last_Name__c</fullName>
    <label>Sales Contact Last Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>