force-app/main/default/objects/EBS_Order__c/fields/SalesContact__c.field-meta.xml
<CustomField>
    <fullName>SalesContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>EBS Orders (Sales Contact)</relationshipLabel>
    <relationshipName>EBS_Orders4</relationshipName>
    <type>Lookup</type>
</CustomField>