force-app/main/default/objects/EBS_Order__c/fields/Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Salesperson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesperson</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>EBSOrders</relationshipLabel>
    <relationshipName>EBSOrders</relationshipName>
    <type>Lookup</type>
</CustomField>