force-app/main/default/objects/EBS_Order__c/fields/Salesperson_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_ID__c</fullName>
    <externalId>true</externalId>
    <label>Salesperson ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>