force-app/main/default/objects/EBS_Order__c/fields/Send_Lead_Time_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Lead_Time_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Lead Time Notification</label>
    <type>Checkbox</type>
</CustomField>