force-app/main/default/objects/EBS_Order__c/fields/Send_Pricing_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Pricing_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>will be send by ODS.</description>
    <label>Send Pricing Notification</label>
    <type>Checkbox</type>
</CustomField>