force-app/main/default/objects/EBS_Order__c/fields/Ship_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Ship_Order_Date__c</fullName>
    <label>Ship Order Date</label>
    <type>Date</type>
</CustomField>