force-app/main/default/objects/EBS_Order__c/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <externalId>true</externalId>
    <label>Ship To</label>
    <length>20</length>
    <type>Text</type>
</CustomField>