force-app/main/default/objects/EBS_Order__c/fields/Shipping_Notif_Contact__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Notif_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Notif Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>EBS Orders (Shipping Notif Contact)</relationshipLabel>
    <relationshipName>EBS_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>