force-app/main/default/objects/EBS_Order__c/fields/Shipping_Notif_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Notif_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipping Notif Opt In</label>
    <type>Checkbox</type>
</CustomField>