force-app/main/default/objects/EBS_Order__c/fields/Shipping_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Notification_Email__c</fullName>
    <label>Shipping Notification Email</label>
    <type>Email</type>
</CustomField>