force-app/main/default/objects/EBS_Order__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <description
  >Holds the Name of the Template, which will be used in send/resend functionality</description>
    <label>Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>