force-app/main/default/objects/EBS_Order__c/fields/Template_Type__c.field-meta.xml
<CustomField>
    <fullName>Template_Type__c</fullName>
    <label>Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anchor Wallace</fullName>
            </value>
            <value>
                <fullName>Calendar Coop</fullName>
            </value>
            <value>
                <fullName>Koozie Group</fullName>
            </value>
            <value>
                <fullName>Gary Containers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>