force-app/main/default/objects/EBS_Order__c/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <label>Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NET 10</fullName>
            </value>
            <value>
                <fullName>NET 45</fullName>
            </value>
            <value>
                <fullName>N15 Consolidate</fullName>
            </value>
            <value>
                <fullName>CREDIT CARD</fullName>
            </value>
            <value>
                <fullName>NET 90</fullName>
            </value>
            <value>
                <fullName>NET 30</fullName>
            </value>
            <value>
                <fullName>NET 60</fullName>
            </value>
            <value>
                <fullName>NET 20</fullName>
            </value>
            <value>
                <fullName>30TH OF NM</fullName>
            </value>
            <value>
                <fullName>ADV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>