force-app/main/default/objects/EBS_Order__c/fields/Tracking_Link_Formula__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Link_Formula__c</fullName>
    <formula
  >IF(Account_Name__r.Restrict_Pricing__c == True , Tracking_Link_NoPricing__c , Tracking_Link__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tracking Link Formula</label>
    <type>Text</type>
</CustomField>