force-app/main/default/objects/EBS_Order__c/fields/Tracking_Link_NoPricing__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Link_NoPricing__c</fullName>
    <description
  >Used in templates where customer doesn&apos;t need to see pricing. Data coming from Integration</description>
    <label>Tracking Link NoPricing</label>
    <type>Url</type>
</CustomField>