force-app/main/default/objects/EBS_Order__c/fields/Trading_Partner_Information__c.field-meta.xml
<CustomField>
    <fullName>Trading_Partner_Information__c</fullName>
    <label>Trading Partner Information</label>
    <length>200</length>
    <type>Text</type>
</CustomField>