force-app/main/default/objects/EBS_Order__c/fields/Type_Of_Order__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Order__c</fullName>
    <label>Type Of Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>