force-app/main/default/objects/EBS_Order__c/fields/Under_50_notification_sent__c.field-meta.xml
<CustomField>
    <fullName>Under_50_notification_sent__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Under 50 notification sent</label>
    <type>Checkbox</type>
</CustomField>