force-app/main/default/objects/EBS_Order__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <label>Warehouse</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SLE</fullName>
            </value>
            <value>
                <fullName>CLW</fullName>
            </value>
            <value>
                <fullName>RDW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>