force-app/main/default/objects/EBS_Order__c/recordTypes/GaryLine.recordType-meta.xml
<RecordType>
    <fullName>GaryLine</fullName>
    <active>true</active>
    <description>RT to store GaryLine Historic orders</description>
    <label>GaryLine</label>
</RecordType>