force-app/main/default/objects/EBS_Order__c/recordTypes/IBSytelineOrder.recordType-meta.xml
<RecordType>
    <fullName>IBSytelineOrder</fullName>
    <active>true</active>
    <description>This is the record type for IB orders</description>
    <label>IB Syteline Order</label>
</RecordType>