force-app/main/default/objects/EBS_Order__c/recordTypes/KGEBSOrder.recordType-meta.xml
<RecordType>
    <fullName>KGEBSOrder</fullName>
    <active>true</active>
    <description>This is the record type for KG orders</description>
    <label>KG EBS Order</label>
</RecordType>