force-app/main/default/objects/EBS_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EBS_Order_Number__c</columns>
    <columns>Customer_Account_Number__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Order_Type__c</columns>
    <columns>Tracking_Link__c</columns>
    <columns>Order_Header_Charges__c</columns>
    <columns>Order_Header_Status__c</columns>
    <columns>Order_Header_Tax__c</columns>
    <columns>Order_Header_Total__c</columns>
    <columns>Order_Line_Count__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>10/31/2025 12:00 AM</value>
    </filters>
    <filters>
        <field>Cust_PO_Total__c</field>
        <operation>greaterThan</operation>
        <value>70000</value>
    </filters>
    <label>KG ALL</label>
    <sharedTo>
        <roleAndSubordinatesInternal
    >KGBusinessUnitCSuite</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>