force-app/main/default/objects/EBS_Order__c/listViews/Copy_of_Todays_orders_IB.listView-meta.xml
<ListView>
    <fullName>Copy_of_Todays_orders_IB</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>PO_Contact__c</columns>
    <columns>PO_Contact_Email__c</columns>
    <columns>EBS_Order_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>YESTERDAY</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>EBS_Order__c.IBSytelineOrder</value>
    </filters>
    <label>Todays orders - IB</label>
    <sharedTo>
        <roleAndSubordinatesInternal>MCMVPSales</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>