force-app/main/default/objects/EBS_Order__c/listViews/IB_ALL.listView-meta.xml
<ListView>
    <fullName>IB_ALL</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>EBS_Order_Number__c</columns>
    <columns>Customer_Account_Number__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Order_Type__c</columns>
    <columns>Tracking_Link__c</columns>
    <columns>Order_Header_Charges__c</columns>
    <columns>Order_Header_Status__c</columns>
    <columns>Order_Header_Tax__c</columns>
    <columns>Order_Header_Total__c</columns>
    <columns>Order_Line_Count__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>12/31/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>EBS_Order__c.IBSytelineOrder</value>
    </filters>
    <label>IB ALL</label>
    <sharedTo>
        <roleAndSubordinatesInternal>MCMVPSales</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>