force-app/main/default/objects/EBS_Order__c/listViews/Replacement.listView-meta.xml
<ListView>
    <fullName>Replacement</fullName>
    <columns>NAME</columns>
    <columns>EBS_Order_Number__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Order_Type__c</columns>
    <columns>Tracking_Link__c</columns>
    <columns>Order_Header_Charges__c</columns>
    <columns>Order_Header_Status__c</columns>
    <columns>Order_Header_Tax__c</columns>
    <columns>Order_Header_Total__c</columns>
    <columns>Order_Line_Count__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_Type__c</field>
        <operation>contains</operation>
        <value>Replacement</value>
    </filters>
    <label>Replacement</label>
</ListView>