force-app/main/default/objects/EBS_Order__c/listViews/Today_s_EBS_Orders_All.listView-meta.xml
<ListView>
    <fullName>Today_s_EBS_Orders_All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>PO_Contact_Email__c</columns>
    <columns>PO_Contact__c</columns>
    <columns>EBS_Order_Number__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Account_Name__c</columns>
    <columns>Acc_PO_Contact_To_Email__c</columns>
    <columns>Latest_in_Production_Date_Time__c</columns>
    <columns>Account_Comm_Preference__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Latest_in_Production_Date_Time__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Order_Type__c</field>
        <operation>notContain</operation>
        <value>Sample</value>
    </filters>
    <label>Today&apos;s EBS Orders All</label>
</ListView>