force-app/main/default/objects/EBS_Order__c/listViews/Todays_orders.listView-meta.xml
<ListView>
    <fullName>Todays_orders</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Order_Header_Status__c</columns>
    <columns>PO_Contact__c</columns>
    <columns>PO_Contact_Email__c</columns>
    <columns>EBS_Order_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Tracking_Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Todays orders - KG</label>
    <sharedTo>
        <roleAndSubordinatesInternal
    >KGBusinessUnitCSuite</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>